Updated with Belfast City Hall information

--- a/_posts/pages/2012-08-28-venue.md
+++ b/_posts/pages/2012-08-28-venue.md
@@ -5,20 +5,17 @@ title: Conference Venue - Gibson Hotel
 permalink: /pages/venue
 ---
 
-## [Gibson Hotel, Dublin](http://www.thegibsonhotel.ie/)
+## [Belfast City Hall, Belfast](http://www.belfastcity.gov.uk/cityhall/)
 
-Chic, understated and right in the heart of Dublin’s brand new cultural hub, the gibson hotel captures the essence of a vibrant city with a music pedigree that runs deep. Subtle, yet surprising, understated yet complex too, our hotel takes inspiration from its central location and unique design – the ultimate urban retreat.
+Belfast City Hall is Belfast City Council's civic building. It is located in Donegall Square, in the heart of Belfast city centre. It first opened its doors on 1 August 1906.
 
-Music lovers, art junkies, food fanatics…whatever your passion it’s right on our doorstep. From vibrant bars, restaurants, theatres and galleries to our music mecca, The O2, you can immerse yourself in Dublin’s culture in just a few short steps.
+![Belfast City Hall](http://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/997055128_c8fb27b317_b.jpg/800px-997055128_c8fb27b317_b.jpg)
+Source: [Macnolete](http://www.flickr.com/photos/macnolete/997055128/)
 
-We have everything you would expect from a contemporary hotel and much, much more. So don’t just take us at face value, dig a little deeper and you’ll be intrigued by the subtle nuances, hidden surprises and little quirks - towering bamboos, calming water features, mesmerising murals.
+### Access information
 
-### Car Parking - The Point Village Car Park
+Access to Belfast City Hall is via the front entrance on Donegall Square North, the side entrance on Donegall Square East and the back gate at Donegall Square South. If you are taking part in one of our Saturday tours, please use the back gate entrance only.
 
-At the gibson hotel car parking spaces are available at The Point Village Car Park located at rear of the hotel. As this is a public car park there is an overnight charge for residents. There is a preferential rate of €14 per 24 hours agreed for the hotel residents, this is payable in the hotel reception on check out. The car park is accessed by the rear of the hotel – see hotel access map.
+#### Car Parking Rates:
 
-#### Hourly Car Parking Rates:
-
-Mid week: **€2.70 per hour**
-Weekend: **€2 per hour**
-Concert rate from 6pm: **€10** *( Valid from 6pm to 12 midnight )*
+TBC
