updated speakers and layout for conf

--- a/_posts/2012-08-30-jkelly.md
+++ b/_posts/2012-08-30-jkelly.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Joanna Kelly
-permalink: /speakers/jkelly
+permalink: /speaker/jkelly
 categories: 
     - speaker
 thumbnail: /img
