--- a/_posts/pages/2012-08-30-speakers.md
+++ b/_posts/pages/2012-08-30-speakers.md
@@ -1,17 +1,19 @@
 ---
-layout: default
+layout: new
 title: IPI Conference Programme
 permalink: /pages/speakers
+published: true
 ---
 
 ## IPI Conference Speakers
 
-<ul class="speakers">
+<ul class="speakers block-grid three-up mobile" >
 {% for post in site.categories.speaker %}
 	<li>
-		<p><a href="{{post.url}}">{{ post.title }}</a><br />
+		<a href="{{site.baseurl}}{{post.url}}"><p> <img src="http://images.ted.com/images/ted/conference-v2.0/TEDGlobal2012/speakers/default/don_tapscott-default.jpg"/><br/>
+			{{ post.title }}<br />
 			<i>{{post.position}}</i>
-		</p>
+		</p></a>
 	</li>
 {% endfor %}
 </ul>
