updates to nav to highlight active page

--- a/_posts/pages/2012-08-28-venue.md
+++ b/_posts/pages/2012-08-28-venue.md
@@ -3,6 +3,7 @@ layout: new
 published: true
 title: Conference Venue - Gibson Hotel
 permalink: /pages/venue
+group: navigation
 ---
 
 ## [Belfast City Hall, Belfast](http://www.belfastcity.gov.uk/cityhall/)
