--- a/_posts/pages/2012-08-30-speakers.md
+++ b/_posts/pages/2012-08-30-speakers.md
@@ -3,6 +3,7 @@ layout: new
 title: IPI Conference Programme
 permalink: /pages/speakers
 published: true
+group: navigation
 ---
 
 ## IPI Conference Speakers
