updated nav to show active page

--- a/_posts/pages/2012-08-30-venue.md
+++ b/_posts/pages/2012-08-30-venue.md
@@ -1,7 +1,7 @@
 ---
 layout: new
 published: true
-title: Conference Venue - Gibson Hotel
+title: Venue
 permalink: /pages/venue
 group: navigation
 ---
