added prose defaults, updated images and remade part of layout to delete joanna

--- a/_posts/pages/2012-08-29-speakers.md
+++ b/_posts/pages/2012-08-29-speakers.md
@@ -11,7 +11,7 @@ group: navigation
 <ul class="speakers block-grid three-up mobile" >
 {% for post in site.categories.speaker %}
 	<li>
-		<a href="{{site.baseurl}}{{post.url}}"><p> <img src="http://images.ted.com/images/ted/conference-v2.0/TEDGlobal2012/speakers/default/don_tapscott-default.jpg"/><br/>
+		<a href="{{site.baseurl}}{{post.url}}"><p> <img src="{{site.baseurl}}{{post.thumbnail}}"/><br/>
 			{{ post.title }}<br />
 			<i>{{post.position}}</i>
 		</p></a>
