--- a/_posts/speakers/2012-08-30-jkelly.md
+++ b/_posts/speakers/2012-08-30-jkelly.md
@@ -4,7 +4,7 @@ title: Joanna Kelly
 permalink: /speaker/jkelly
 categories: 
     - speaker
-thumbnail: /img
+thumbnail: /img/speakers/s/joanna_kelly.jpg
 position: IPI President
 bio: Joanna Kelly is the current President of the Irish Planning Institute. She has over ten years professional planning experience and is an Inspector with An Bord Plean·la. She has worked in a number of local authorities including Meath, Westmeath and Drogheda Borough Council. 
 ---
