--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -6,8 +6,33 @@ published: "true"
 group: "navigation" #if you want it to show in top nav
 published: "true"
 
+published: false
 ---
 
-# Register for the conference using the booking form below.
+### Register for the conference using the booking form below.
 
-Enter Text in Markdown format.
+### Rates
+
+### One Day Rate
+
+Member							€195
+
+Non-Member						€490
+
+### Two Day Rate
+
+Member							€195
+
+Non-Member						€340
+
+### Unwaged & Student Rates
+
+A limited number of discounted places are available to Student and Unemployed Members at €60 however the IPI office will follow up requesting documentation which proves to the effect the members circumstances or proof of student identification.
+
+**Places are allocated on a first come, first served basis.**
+
+
+### Discounts
+
+**If 3 no. places are booked at the same time there will be a 10% discount on the combined total.**
+
