--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -11,26 +11,24 @@ published: "true"
 
 ### Rates
 
-### One Day Rate
+**One Day Rate**
 
-Member							€195
+Member							<a href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1" class="button">€195 Book Now</a>
 
 Non-Member						€490
 
-### Two Day Rate
+**Two Day Rate**
 
 Member							€195
 
 Non-Member						€340
 
-### Unwaged & Student Rates
+**Unwaged & Student Rates**
 
 A limited number of discounted places are available to Student and Unemployed Members at €60 however the IPI office will follow up requesting documentation which proves to the effect the members circumstances or proof of student identification.
 
 **Places are allocated on a first come, first served basis.**
 
-
-### Discounts
+**Discounts**
 
 **If 3 no. places are booked at the same time there will be a 10% discount on the combined total.**
-
