--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -5,6 +5,7 @@ permalink: "/pages/registration"
 published: "true"
 group: "navigation" #if you want it to show in top nav
 published: "true"
+published: false
 ---
 
 ### Register for the conference using the booking form below.
@@ -13,22 +14,30 @@ published: "true"
 
 **One Day Rate**
 
-Member							<a href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1" class="button">€195 Book Now</a>
-
-Non-Member						€490
-
+Member							<a href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1" class="button radius small">€195 Book Now</a>
+<ul class="pricing-table">
+  <li class="title">IPI Member Only</li>
+  <li class="price">€195</li>
+  <li class="description">Single Day Rate Only</li>
+  <li class="bullet-item">Single Day Rate Only</li>
+  <li class="bullet-item">Does not include conference dinner.</li>
+  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a></li>
+</ul>
+<hr/>
+Non-Member						<a href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1" class="button radius small">€490</a>
+<hr/>
 **Two Day Rate**
 
-Member							€195
-
-Non-Member						€340
-
+Member							<a href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1" class="button radius small">€195</a>
+<hr/>
+Non-Member						<a href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1" class="button radius small">€340</a>
+<hr/>
 **Unwaged & Student Rates**
 
 A limited number of discounted places are available to Student and Unemployed Members at €60 however the IPI office will follow up requesting documentation which proves to the effect the members circumstances or proof of student identification.
 
 **Places are allocated on a first come, first served basis.**
-
+<hr/>
 **Discounts**
 
 **If 3 no. places are booked at the same time there will be a 10% discount on the combined total.**
