--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -4,8 +4,7 @@ title: "Register"
 permalink: "/pages/registration"
 published: "true"
 group: "navigation" #if you want it to show in top nav
-published: "true"
-published: false
+published: true
 ---
 
 ### Register for the conference using the booking form below.
