--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -13,17 +13,25 @@ published: true
 
 **One Day Rate**
 
-Member							<a href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1" class="button radius small">€195 Book Now</a>
 <ul class="pricing-table">
-  <li class="title">IPI Member Only</li>
+  <li class="title">Single Day</li>
   <li class="price">€195</li>
-  <li class="description">Single Day Rate Only</li>
-  <li class="bullet-item">Single Day Rate Only</li>
+  <li class="description">This is entitles an IPI member to attend a single day of the conference as inidicated at time of purchase.</li>
+  <li class="bullet-item">IPI Members Only</li>
   <li class="bullet-item">Does not include conference dinner.</li>
-  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a></li>
+  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  </li>
 </ul>
-<hr/>
-Non-Member						<a href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1" class="button radius small">€490</a>
+<ul class="pricing-table">
+  <li class="title">Single Day</li>
+  <li class="price">€260</li>
+  <li class="description">This is entitles a non member to attend a single day of the conference as inidicated at time of purchase.</li>
+  <li class="bullet-item">Non Members</li>
+  <li class="bullet-item">Does not include conference dinner.</li>
+  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  </li>
+</ul>
+
 <hr/>
 **Two Day Rate**
 
