--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -14,7 +14,7 @@ published: true
 **One Day Rate**
 
 <ul class="pricing-table">
-  <li class="title">Single Day</li>
+  <li class="title">Single Day (Member)</li>
   <li class="price">€195</li>
   <li class="description">This is entitles an IPI member to attend a single day of the conference as inidicated at time of purchase.</li>
   <li class="bullet-item">IPI Members Only</li>
@@ -23,7 +23,7 @@ published: true
   </li>
 </ul>
 <ul class="pricing-table">
-  <li class="title">Single Day</li>
+  <li class="title">Single Day (Non Member)</li>
   <li class="price">€260</li>
   <li class="description">This is entitles a non member to attend a single day of the conference as inidicated at time of purchase.</li>
   <li class="bullet-item">Non Members</li>
@@ -35,10 +35,26 @@ published: true
 <hr/>
 **Two Day Rate**
 
-Member							<a href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1" class="button radius small">€195</a>
-<hr/>
-Non-Member						<a href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1" class="button radius small">€340</a>
-<hr/>
+<ul class="pricing-table">
+  <li class="title">Conference Ticket (Member)</li>
+  <li class="price">€340</li>
+  <li class="description">This is entitles an IPI Member to attend the full conference programme.</li>
+  <li class="bullet-item">IPI Members Only</li>
+  <li class="bullet-item">Admission to Conference Dinner included.</li>
+  <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
+  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  </li>
+</ul>
+<ul class="pricing-table">
+  <li class="title">Conference Ticket (Non-Member)</li>
+  <li class="price">€490</li>
+  <li class="description">This is entitles a non member to attend the full conference programme.</li>
+  <li class="bullet-item">Non Members</li>
+  <li class="bullet-item">Admission to Conference Dinner included.</li>
+  <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
+  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  </li>
+</ul>
 **Unwaged & Student Rates**
 
 A limited number of discounted places are available to Student and Unemployed Members at €60 however the IPI office will follow up requesting documentation which proves to the effect the members circumstances or proof of student identification.
