--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -35,6 +35,7 @@ published: true
 <hr/>
 **Two Day Rate**
 
+<div class="six columns">
 <ul class="pricing-table">
   <li class="title">Conference Ticket (Member)</li>
   <li class="price">€340</li>
@@ -45,6 +46,9 @@ published: true
   <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
   </li>
 </ul>
+</div>
+
+<div class="six columns">
 <ul class="pricing-table">
   <li class="title">Conference Ticket (Non-Member)</li>
   <li class="price">€490</li>
@@ -55,6 +59,8 @@ published: true
   <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
   </li>
 </ul>
+</div> 
+
 **Unwaged & Student Rates**
 
 A limited number of discounted places are available to Student and Unemployed Members at €60 however the IPI office will follow up requesting documentation which proves to the effect the members circumstances or proof of student identification.
