--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -7,33 +7,7 @@ group: "navigation" #if you want it to show in top nav
 published: true
 ---
 
-### Register for the conference using the booking form below.
-
-### Rates
-
-**One Day Rate**
-
-<ul class="pricing-table">
-  <li class="title">Single Day (Member)</li>
-  <li class="price">€195</li>
-  <li class="description">This is entitles an IPI member to attend a single day of the conference as inidicated at time of purchase.</li>
-  <li class="bullet-item">IPI Members Only</li>
-  <li class="bullet-item">Does not include conference dinner.</li>
-  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
-  </li>
-</ul>
-<ul class="pricing-table">
-  <li class="title">Single Day (Non Member)</li>
-  <li class="price">€260</li>
-  <li class="description">This is entitles a non member to attend a single day of the conference as inidicated at time of purchase.</li>
-  <li class="bullet-item">Non Members</li>
-  <li class="bullet-item">Does not include conference dinner.</li>
-  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
-  </li>
-</ul>
-
-<hr/>
-**Two Day Rate**
+### Two Day Rate
 
 <div class="six columns">
 <ul class="pricing-table">
@@ -60,6 +34,31 @@ published: true
   </li>
 </ul>
 </div> 
+
+### One Day Rate
+<div class="six columns">
+<ul class="pricing-table">
+  <li class="title">Single Day (Member)</li>
+  <li class="price">€195</li>
+  <li class="description">This is entitles an IPI member to attend a single day of the conference as inidicated at time of purchase.</li>
+  <li class="bullet-item">IPI Members Only</li>
+  <li class="bullet-item">Does not include conference dinner.</li>
+  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  </li>
+</ul>
+</div>
+<div class="six columns">
+<ul class="pricing-table">
+  <li class="title">Single Day (Non Member)</li>
+  <li class="price">€260</li>
+  <li class="description">This is entitles a non member to attend a single day of the conference as inidicated at time of purchase.</li>
+  <li class="bullet-item">Non Members</li>
+  <li class="bullet-item">Does not include conference dinner.</li>
+  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  </li>
+</ul>
+</div>
+
 
 **Unwaged & Student Rates**
 
