--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -60,12 +60,14 @@ published: true
 </div>
 
 
-**Unwaged & Student Rates**
+### Unwaged & Student Rates
 
 A limited number of discounted places are available to Student and Unemployed Members at €60 however the IPI office will follow up requesting documentation which proves to the effect the members circumstances or proof of student identification.
 
 **Places are allocated on a first come, first served basis.**
 <hr/>
-**Discounts**
+<div class="panel radius">
+### Discounts
 
 **If 3 no. places are booked at the same time there will be a 10% discount on the combined total.**
+</div>
