--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -66,8 +66,11 @@ A limited number of discounted places are available to Student and Unemployed Me
 
 **Places are allocated on a first come, first served basis.**
 <hr/>
+
 <div class="panel radius">
-### Discounts
+
+<h5>Discounts</h5>
 
 **If 3 no. places are booked at the same time there will be a 10% discount on the combined total.**
+
 </div>
