--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -68,9 +68,6 @@ A limited number of discounted places are available to Student and Unemployed Me
 <hr/>
 
 <div class="panel radius">
-
 <h5>Discounts</h5>
-
-**If 3 no. places are booked at the same time there will be a 10% discount on the combined total.**
-
+<b>If 3 no. places are booked at the same time there will be a 10% discount on the combined total.</b>
 </div>
