--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -11,7 +11,7 @@ published: true
 
 <div class="six columns">
 <ul class="pricing-table">
-  <li class="title">Conference Ticket (Member)</li>
+  <li class="title">Two Day (Member)</li>
   <li class="price">€340</li>
   <li class="description">This is entitles an IPI Member to attend the full conference programme.</li>
   <li class="bullet-item">IPI Members Only</li>
@@ -24,7 +24,7 @@ published: true
 
 <div class="six columns">
 <ul class="pricing-table">
-  <li class="title">Conference Ticket (Non-Member)</li>
+  <li class="title">Two Day (Non-Member)</li>
   <li class="price">€490</li>
   <li class="description">This is entitles a non member to attend the full conference programme.</li>
   <li class="bullet-item">Non Members</li>
