--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -13,7 +13,7 @@ published: true
 <ul class="pricing-table">
   <li class="title">Two Day (Member)</li>
   <li class="price">€340</li>
-  <li class="description">This is entitles an IPI Member to attend the full conference programme.</li>
+  <li class="description">This entitles an IPI Member to attend the full conference programme.</li>
   <li class="bullet-item">IPI Members Only</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
   <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
@@ -26,7 +26,7 @@ published: true
 <ul class="pricing-table">
   <li class="title">Two Day (Non-Member)</li>
   <li class="price">€490</li>
-  <li class="description">This is entitles a non member to attend the full conference programme.</li>
+  <li class="description">This entitles a non member to attend the full conference programme.</li>
   <li class="bullet-item">Non Members</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
   <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
