--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -17,7 +17,7 @@ published: true
   <li class="bullet-item">IPI Members Only</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
   <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
-  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012MEMB">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div>
@@ -30,7 +30,7 @@ published: true
   <li class="bullet-item">Non Members</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
   <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
-  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div> 
@@ -43,7 +43,7 @@ published: true
   <li class="description">This is entitles an IPI member to attend a single day of the conference as inidicated at time of purchase.</li>
   <li class="bullet-item">IPI Members Only</li>
   <li class="bullet-item">Does not include conference dinner.</li>
-  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012MEMB1">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div>
