--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -7,7 +7,7 @@ group: "navigation" #if you want it to show in top nav
 published: true
 ---
 
-### Two Day Rate
+### Conference Rates
 
 <div class="six columns">
 <ul class="pricing-table">
@@ -34,8 +34,6 @@ published: true
   </li>
 </ul>
 </div> 
-
-### One Day Rate
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Single Day (Member)</li>
