--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -9,6 +9,11 @@ published: true
 
 ### Conference Rates
 
+<div class="panel radius callout">
+<h5>Discounts</h5>
+<b>If 3 no. places are booked at the same time there will be a 10% discount on the combined total.</b>
+</div>
+
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Two Day (Member)</li>
@@ -64,8 +69,3 @@ A limited number of discounted places are available to Student and Unemployed Me
 
 **Places are allocated on a first come, first served basis.**
 <hr/>
-
-<div class="panel radius">
-<h5>Discounts</h5>
-<b>If 3 no. places are booked at the same time there will be a 10% discount on the combined total.</b>
-</div>
