--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -10,8 +10,8 @@ published: true
 ### Conference Rates
 
 <div class="panel radius callout">
-<h5>Discounts</h5>
-<b>If 3 no. places are booked at the same time there will be a 10% discount on the combined total.</b>
+<b>Discounts<b>
+If 3 no. places are booked at the same time there will be a 10% discount on the combined total.
 </div>
 
 <div class="six columns">
