--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -10,7 +10,7 @@ published: true
 ### Conference Rates
 
 <div class="panel radius callout">
-<b>Discounts<b>
+<h5>Discounts<h5>
 <p>If 3 no. places are booked at the same time there will be a 10% discount on the combined total.</p>
 </div>
 
