--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -12,7 +12,8 @@ published: true
 <div class="panel radius callout">
 
 <h5>Discounts<h5>
-<p>If 3 no. places are booked at the same time there will be a 10% discount on the combined total.</p>
+
+If 3 no. places are booked at the same time there will be a 10% discount on the combined total.
 
 </div>
 
