--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -13,7 +13,7 @@ published: true
 
 <h5>Discounts<h5>
 
-If 3 no. places are booked at the same time there will be a 10% discount on the combined total.
+If 3 no. places are booked at the same time there will be a 10 discount on the combined total.
 
 </div>
 
