replace & with &amp; 's

--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -10,7 +10,7 @@ published: true
 ### Conference Rates
 
 <div class="panel radius callout">
-<h5>Discounts<h5>
+<h5>Discounts</h5>
 <b>If 3 no. places are booked at the same time there will be a 10 discount on the combined total.</b>
 </div>
 
@@ -22,9 +22,10 @@ published: true
   <li class="bullet-item">IPI Members Only</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
   <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
-  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012MEMB">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=IPI2012MEMB">Buy it Now &raquo;</a>
   </li>
 </ul>
+
 </div>
 
 <div class="six columns">
@@ -35,7 +36,7 @@ published: true
   <li class="bullet-item">Non Members</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
   <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
-  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=IPI2012NMB">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div> 
@@ -46,7 +47,7 @@ published: true
   <li class="description">This is entitles an IPI member to attend a single day of the conference as inidicated at time of purchase.</li>
   <li class="bullet-item">IPI Members Only</li>
   <li class="bullet-item">Does not include conference dinner.</li>
-  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012MEMB1">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=IPI2012MEMB1">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div>
@@ -57,13 +58,13 @@ published: true
   <li class="description">This is entitles a non member to attend a single day of the conference as inidicated at time of purchase.</li>
   <li class="bullet-item">Non Members</li>
   <li class="bullet-item">Does not include conference dinner.</li>
-  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div>
 
 
-### Unwaged & Student Rates
+### Unwaged &amp; Student Rates
 
 A limited number of discounted places are available to Student and Unemployed Members at €60 however the IPI office will follow up requesting documentation which proves to the effect the members circumstances or proof of student identification.
 
