updated pricing and links to buy tickets

--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -14,15 +14,19 @@ published: true
 <b>If 3 no. places are booked at the same time there will be a 10 discount on the combined total.</b>
 </div>
 
+<div class="twelve columns">
+	
+
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Two Day (Member)</li>
-  <li class="price">€340</li>
+  <li class="price">€299</li>
   <li class="description">This entitles an IPI Member to attend the full conference programme.</li>
-  <li class="bullet-item">IPI Members Only</li>
+  <li class="bullet-item">IPI Members</li> 
+  <li class="bullet-item">RTPI, Urban Forum Members and Councillors</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
   <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
-  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=IPI2012MEMB">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius success" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF2DM">Buy it Now &raquo;</a>
   </li>
 </ul>
 
@@ -31,42 +35,97 @@ published: true
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Two Day (Non-Member)</li>
-  <li class="price">€490</li>
+  <li class="price">€450</li>
   <li class="description">This entitles a non member to attend the full conference programme.</li>
   <li class="bullet-item">Non Members</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
+  <li class="bullet-item">Ideal opportunity network with Built Environment Professionals.</li>
   <li class="bullet-item">Choice of Fieldtrip on 2nd Day.</li>
-  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=IPI2012NMB">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF2DNM">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div> 
+
+<hr />
+
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Single Day (Member)</li>
-  <li class="price">€195</li>
-  <li class="description">This is entitles an IPI member to attend a single day of the conference as inidicated at time of purchase.</li>
-  <li class="bullet-item">IPI Members Only</li>
+  <li class="price">€180</li>
+<li class="description">This is entitles a member to attend a single day of the conference as indicated at time of purchase.</li>
+  <li class="bullet-item">IPI Members</li> 
+  <li class="bullet-item">RTPI, Urban Forum Members and Councillors</li>
+  <li class="bullet-item">Admission to Conference Dinner included.</li>
+  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF1DM">Buy it Now &raquo;</a>
+  </li>
+</ul>
+</div>
+
+<div class="six columns">
+<ul class="pricing-table">
+  <li class="title">Single Day (Non Member)</li>
+  <li class="price">€250</li>
+  <li class="description">This is entitles a non member to attend a single day of the conference as indicated at time of purchase.</li>
+  <li class="bullet-item">Non Members</li>
+	<li class="bullet-item">Ideal for attending Key Note speeches.</li>
+  <li class="bullet-item">Admission to Conference Dinner included.</li>
+  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF1DNM">Buy it Now &raquo;</a>
+  </li>
+</ul>
+</div>
+<hr />
+
+<div class="six columns">
+<ul class="pricing-table">
+  <li class="title">Single Day (Member)</li>
+  <li class="price">€140</li>
+<li class="description">This is entitles a non member to attend a single day of the conference as indicated at time of purchase.</li>
+  <li class="bullet-item">IPI Members</li> 
+  <li class="bullet-item">RTPI, Urban Forum Members and Councillors</li>
   <li class="bullet-item">Does not include conference dinner.</li>
-  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=IPI2012MEMB1">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF1M">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div>
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Single Day (Non Member)</li>
-  <li class="price">€260</li>
+  <li class="price">€210</li>
   <li class="description">This is entitles a non member to attend a single day of the conference as inidicated at time of purchase.</li>
   <li class="bullet-item">Non Members</li>
+<li class="bullet-item">Ideal for attending Key Note speeches.</li>
   <li class="bullet-item">Does not include conference dinner.</li>
-  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=IPI2012NMB1">Buy it Now &raquo;</a>
+  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF1NM">Buy it Now &raquo;</a>
   </li>
 </ul>
 </div>
+<hr/>
+</div>
 
+### Dinner Ticket
+
+
+<ul class="pricing-table">
+  <li class="title">Dinner Ticket</li>
+  <li class="price">€55</li>
+  <li class="description">Admittance to Conference Dinner Only</li>
+  <li class="bullet-item">Belfast City Hall</li>
+  <li class="cta-button"><a class="button radius success" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONFDIN">Buy it Now &raquo;</a>
+  </li>
+</ul>
+**Places are allocated on a first come, first served basis.**
+<hr/>
 
 ### Unwaged &amp; Student Rates
 
-A limited number of discounted places are available to Student and Unemployed Members at €60 however the IPI office will follow up requesting documentation which proves to the effect the members circumstances or proof of student identification.
-
+<ul class="pricing-table">
+  <li class="title">Single Day (Non Member)</li>
+  <li class="price">€155</li>
+  <li class="description">Students or Unwaged Members Only</li>
+  <li class="bullet-item">2 Day Rate incl. Dinner.</li>
+  <li class="bullet-item">Documentation of circumstances may be requested by the IPI Office.</li>
+  <li class="cta-button"><a class="button radius alert" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONF2DSW">Buy it Now &raquo;</a>
+  </li>
+</ul>
 **Places are allocated on a first come, first served basis.**
 <hr/>
