updated pricing and links to buy tickets

--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -11,7 +11,7 @@ published: true
 
 <div class="panel radius callout">
 <h5>Discounts</h5>
-<b>If 3 no. places are booked at the same time there will be a 10 discount on the combined total.</b>
+<b>If 3 no. places are booked at the same time there will be a 10% discount on the combined total.</b>
 </div>
 
 <div class="twelve columns">
