updated pricing for sterling prices.

--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -15,7 +15,7 @@ published: true
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Two Day (Member)</li>
-  <li class="price">€299</li>
+  <li class="price">€299 / £255</li>
   <li class="description">This entitles an IPI Member to attend the full conference programme.</li>
   <li class="bullet-item">IPI Members</li> 
   <li class="bullet-item">RTPI, Urban Forum Members and Councillors</li>
@@ -30,7 +30,7 @@ published: true
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Two Day (Non-Member)</li>
-  <li class="price">€450</li>
+  <li class="price">€450 / £385</li>
   <li class="description">This entitles a non member to attend the full conference programme.</li>
   <li class="bullet-item">Non Members</li>
   <li class="bullet-item">Admission to Conference Dinner included.</li>
@@ -46,7 +46,7 @@ published: true
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Single Day (Member)</li>
-  <li class="price">€180</li>
+  <li class="price">€180 / £155</li>
 <li class="description">This is entitles a member to attend a single day of the conference as indicated at time of purchase.</li>
   <li class="bullet-item">IPI Members</li> 
   <li class="bullet-item">RTPI, Urban Forum Members and Councillors</li>
@@ -59,7 +59,7 @@ published: true
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Single Day (Non Member)</li>
-  <li class="price">€250</li>
+  <li class="price">€250 / £215</li>
   <li class="description">This is entitles a non member to attend a single day of the conference as indicated at time of purchase.</li>
   <li class="bullet-item">Non Members</li>
 	<li class="bullet-item">Ideal for attending Key Note speeches.</li>
@@ -73,7 +73,7 @@ published: true
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Single Day (Member)</li>
-  <li class="price">€140</li>
+  <li class="price">€140 / £120</li>
 <li class="description">This is entitles a non member to attend a single day of the conference as indicated at time of purchase.</li>
   <li class="bullet-item">IPI Members</li> 
   <li class="bullet-item">RTPI, Urban Forum Members and Councillors</li>
@@ -85,7 +85,7 @@ published: true
 <div class="six columns">
 <ul class="pricing-table">
   <li class="title">Single Day (Non Member)</li>
-  <li class="price">€210</li>
+  <li class="price">€210 / £180</li>
   <li class="description">This is entitles a non member to attend a single day of the conference as inidicated at time of purchase.</li>
   <li class="bullet-item">Non Members</li>
 <li class="bullet-item">Ideal for attending Key Note speeches.</li>
@@ -102,7 +102,7 @@ published: true
 
 <ul class="pricing-table">
   <li class="title">Dinner Ticket</li>
-  <li class="price">€55</li>
+  <li class="price">€55 / £47</li>
   <li class="description">Admittance to Conference Dinner Only</li>
   <li class="bullet-item">Belfast City Hall</li>
   <li class="cta-button"><a class="button radius success" href="http://www.romancart.com/cart.asp?storeid=34538&amp;itemcode=CONFDIN">Buy it Now &raquo;</a>
@@ -114,8 +114,8 @@ published: true
 ### Unwaged &amp; Student Rates
 
 <ul class="pricing-table">
-  <li class="title">Single Day (Non Member)</li>
-  <li class="price">€155</li>
+  <li class="title">Two Day Rate</li>
+  <li class="price">€155 / £125</li>
   <li class="description">Students or Unwaged Members Only</li>
   <li class="bullet-item">2 Day Rate incl. Dinner.</li>
   <li class="bullet-item">Documentation of circumstances may be requested by the IPI Office.</li>
