--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -10,7 +10,7 @@ published: true
 ### Conference Rates
 
 <div class="panel">
-      <h5>Sterling equivalant rates</h5>
+      <h5>Sterling equivalent rates</h5>
       <p>Please note that while prices are quoted in Sterling below, these are only equivalent prices as of 30/01/2013. <b>All payments will be processed in Euro only.</b></p>
 </div>
 
