--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -1,6 +1,6 @@
 ---
 layout: new
-title: "Register"
+title: "Book"
 permalink: "/pages/registration"
 published: "true"
 group: "navigation" #if you want it to show in top nav
