--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -11,7 +11,7 @@ published: true
 
 <div class="panel">
       <h5>Sterling equivalent rates</h5>
-      <p>Please note that while prices are quoted in Sterling below, these are only equivalent prices as of 30/01/2013. <b>All payments will be processed in Euro only.</b></p>
+      <p>Please note that while prices are quoted in Sterling below, these are only equivalent prices as of 30/01/2013. <b>All payments will be processed in Euro only. We are pleased to announce that conference rates have been substantially reduced over the 2012 rates.</b></p>
 </div>
 
 <div class="twelve columns">
