--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -8,10 +8,10 @@ published: true
 ---
 
 ### Conference Rates
-
+<b>We are pleased to announce that conference rates have been substantially reduced over the 2012 rates.</b>
 <div class="panel">
       <h5>Sterling equivalent rates</h5>
-      <p>Please note that while prices are quoted in Sterling below, these are only equivalent prices as of 30/01/2013. <b>All payments will be processed in Euro only. We are pleased to announce that conference rates have been substantially reduced over the 2012 rates.</b></p>
+      <p>Please note that while prices are quoted in Sterling below, these are only equivalent prices as of 30/01/2013. <b>All payments will be processed in Euro only. </b></p>
 </div>
 
 <div class="twelve columns">
