--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -8,7 +8,7 @@ published: true
 ---
 
 ### Conference Rates
-<b>We are pleased to announce that conference rates have been substantially reduced over the 2012 rates.</b>
+###We are pleased to announce that conference rates have been substantially reduced over the 2012 rates
 
 <div class="panel">
       <h5>Sterling equivalent rates</h5>
