--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -8,7 +8,7 @@ published: true
 ---
 
 ### Conference Rates
-*We are pleased to announce that conference rates have been substantially reduced over the 2012 rates*
+*Conference rates have been substantially reduced over 2012 rates with the members' rate now 30% reduced on the 2008 rate*
 
 <div class="panel">
       <h5>Sterling equivalent rates</h5>
