--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -8,7 +8,7 @@ published: true
 ---
 
 ### Conference Rates
-*Conference rates have been substantially reduced over 2012 rates with the members' rate now representing a 30% reduction on the 2008 rate*
+*Conference rates have been substantially reduced over 2012 rates*
 
 <div class="panel">
       <h5>Sterling equivalent rates</h5>
