--- a/_posts/pages/2013-01-27-register.md
+++ b/_posts/pages/2013-01-27-register.md
@@ -8,7 +8,7 @@ published: true
 ---
 
 ### Conference Rates
-*Conference rates have been substantially reduced over 2012 rates*
+*Conference rates have been substantially reduced compared to 2012 rates and this follows significant reductions over recent years*
 
 <div class="panel">
       <h5>Sterling equivalent rates</h5>
